--- a/README
+++ b/README
@@ -1,13 +1,7 @@
-# Readme
+## Readme
 
-<ul>
-  <ol>Clone repository</ol>
-  <ol>Copy iwlwifi-8000C-26.ucode to /lib/firmware</ol>
-  <ol>
-    <dl>
-      <dt>Edit file /usr/share/appdata/firmware-iwlwifi.metainfo.xml and past new line:</dt>
-      <dd><firmware type="runtime">iwlwifi-8000C-26.ucode</firmware></dd>
-    </dl>
-  </ol>
-  <ol>It's done.</ol>
-</ul>
+* Clone repository
+* Copy iwlwifi-8000C-26.ucode to /lib/firmware
+* Edit file /usr/share/appdata/firmware-iwlwifi.metainfo.xml and past new line:
+* <firmware type="runtime">iwlwifi-8000C-26.ucode</firmware>
+* It's done.
